# discursos_milei

./: .gitignore  README.md  collect_and_update_data.py  monitor_website.py  pyproject.toml  requirements.txt  test_monitor_website.py
.github/workflows/: main.yml
data/: argentina_network.json  discursos_milei.csv  discursos_milei_processed.json  latest-scrape.txt
notebooks/: 0.0-collect-data.ipynb
